# obc_rate_noise_plots

./: Makefile  index.html  plot_recent_rates.py  pyproject.toml  ruff.toml  task_schedule.cfg
obc_rate_noise_plots/: plot_recent_rates.py  task_schedule.cfg
obc_rate_noise_plots/scripts/: plot_recent_rates.py
